--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.SystrayShell/Properties/Resources.resx
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.SystrayShell/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="pwIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pwIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pwIconBusy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pwIconBusy.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
