--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/LaunchProcess.resx
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/LaunchProcess.resx
@@ -125,7 +125,7 @@
     <value>160, 228</value>
   </data>
   <data name="Yes.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 45</value>
+    <value>114, 45</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Yes.TabIndex" type="System.Int32, mscorlib">
@@ -144,7 +144,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Yes.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>4</value>
   </data>
   <data name="No.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt</value>
@@ -154,10 +154,10 @@
     <value>NoControl</value>
   </data>
   <data name="No.Location" type="System.Drawing.Point, System.Drawing">
-    <value>428, 228</value>
+    <value>386, 228</value>
   </data>
   <data name="No.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 45</value>
+    <value>116, 45</value>
   </data>
   <data name="No.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -175,7 +175,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;No.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="YesToAll.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt</value>
@@ -187,7 +187,7 @@
     <value>160, 297</value>
   </data>
   <data name="YesToAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 45</value>
+    <value>114, 45</value>
   </data>
   <data name="YesToAll.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -205,7 +205,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;YesToAll.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>2</value>
   </data>
   <data name="NoToAll.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt</value>
@@ -214,10 +214,10 @@
     <value>NoControl</value>
   </data>
   <data name="NoToAll.Location" type="System.Drawing.Point, System.Drawing">
-    <value>428, 297</value>
+    <value>386, 297</value>
   </data>
   <data name="NoToAll.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 45</value>
+    <value>116, 45</value>
   </data>
   <data name="NoToAll.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -235,7 +235,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;NoToAll.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>1</value>
   </data>
   <data name="Notice.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -244,16 +244,19 @@
     <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="Notice.Location" type="System.Drawing.Point, System.Drawing">
-    <value>234, 69</value>
+    <value>232, 72</value>
   </data>
   <data name="Notice.Size" type="System.Drawing.Size, System.Drawing">
-    <value>222, 25</value>
+    <value>220, 25</value>
   </data>
   <data name="Notice.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
   </data>
   <data name="Notice.Text" xml:space="preserve">
-    <value>About to launch process</value>
+    <value>Restore missing window</value>
+  </data>
+  <data name="Notice.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>TopCenter</value>
   </data>
   <data name="&gt;&gt;Notice.Name" xml:space="preserve">
     <value>Notice</value>
@@ -265,36 +268,6 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Notice.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="ProcessName.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="ProcessName.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 12pt</value>
-  </data>
-  <data name="ProcessName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>243, 133</value>
-  </data>
-  <data name="ProcessName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>39, 25</value>
-  </data>
-  <data name="ProcessName.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
-  </data>
-  <data name="ProcessName.Text" xml:space="preserve">
-    <value>foo</value>
-  </data>
-  <data name="&gt;&gt;ProcessName.Name" xml:space="preserve">
-    <value>ProcessName</value>
-  </data>
-  <data name="&gt;&gt;ProcessName.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;ProcessName.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;ProcessName.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -306,11 +279,14 @@
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>677, 387</value>
   </data>
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Restore Process</value>
+    <value>Launch Process</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>RunProcess</value>
+    <value>LaunchProcess</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
