--- a/Ninjacrab.PersistentWindows.Solution/Common/LaunchProcess.resx
+++ b/Ninjacrab.PersistentWindows.Solution/Common/LaunchProcess.resx
@@ -122,7 +122,7 @@
     <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="Yes.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 238</value>
+    <value>160, 266</value>
   </data>
   <data name="Yes.Size" type="System.Drawing.Size, System.Drawing">
     <value>114, 45</value>
@@ -144,7 +144,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Yes.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="No.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt</value>
@@ -154,7 +154,7 @@
     <value>NoControl</value>
   </data>
   <data name="No.Location" type="System.Drawing.Point, System.Drawing">
-    <value>386, 238</value>
+    <value>386, 266</value>
   </data>
   <data name="No.Size" type="System.Drawing.Size, System.Drawing">
     <value>116, 45</value>
@@ -175,7 +175,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;No.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="YesToAll.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt</value>
@@ -184,7 +184,7 @@
     <value>NoControl</value>
   </data>
   <data name="YesToAll.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 307</value>
+    <value>160, 333</value>
   </data>
   <data name="YesToAll.Size" type="System.Drawing.Size, System.Drawing">
     <value>114, 45</value>
@@ -205,7 +205,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;YesToAll.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>4</value>
   </data>
   <data name="NoToAll.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 12pt</value>
@@ -214,7 +214,7 @@
     <value>NoControl</value>
   </data>
   <data name="NoToAll.Location" type="System.Drawing.Point, System.Drawing">
-    <value>386, 307</value>
+    <value>386, 333</value>
   </data>
   <data name="NoToAll.Size" type="System.Drawing.Size, System.Drawing">
     <value>116, 45</value>
@@ -235,7 +235,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;NoToAll.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="Notice.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -244,7 +244,7 @@
     <value>Microsoft Sans Serif, 12pt</value>
   </data>
   <data name="Notice.Location" type="System.Drawing.Point, System.Drawing">
-    <value>155, 41</value>
+    <value>155, 25</value>
   </data>
   <data name="Notice.Size" type="System.Drawing.Size, System.Drawing">
     <value>367, 25</value>
@@ -268,6 +268,60 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Notice.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>303, 77</value>
+  </data>
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>41, 15</value>
+  </data>
+  <data name="label1.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>label1</value>
+  </data>
+  <data name="&gt;&gt;label1.Name" xml:space="preserve">
+    <value>label1</value>
+  </data>
+  <data name="&gt;&gt;label1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>303, 134</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>41, 15</value>
+  </data>
+  <data name="label2.TabIndex" type="System.Int32, mscorlib">
+    <value>8</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>label2</value>
+  </data>
+  <data name="&gt;&gt;label2.Name" xml:space="preserve">
+    <value>label2</value>
+  </data>
+  <data name="&gt;&gt;label2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;label2.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -277,7 +331,7 @@
     <value>8, 16</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>670, 390</value>
+    <value>670, 399</value>
   </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
