--- a/Ninjacrab.PersistentWindows.Solution/SystrayShell/Properties/Resources.resx
+++ b/Ninjacrab.PersistentWindows.Solution/SystrayShell/Properties/Resources.resx
@@ -121,8 +121,14 @@
   <data name="pwIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pwIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="pwIcon2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pwIcon2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pwIconBusy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pwIconBusy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pwIconBusy2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pwIconBusy2.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="pwIconUpdate" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pwIconUpdate.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
